Bug 1255735 - "Firefox 45 does not send content-type in empty input[type=file] anymore". r=smaug, a=sylvestre